# map_builder

./: 3D_MAPPING_GUIDE.md  BUILD_INSTRUCTIONS.md  CAMERA_ROTATION_FIX.md  CMakeLists.txt  COMPILATION_FIXES.md  IMPROVEMENTS_SUMMARY.md  OAKD_INTEGRATION.md  OPTIMIZATION_GUIDE.md  README.md  RVIZ_TROUBLESHOOTING.md  SETUP.md  package.xml  robot_description_template.txt  setup.cfg  setup.py  test_entry_points.py
config/: ReconSurface.cfg  basic_recon_v2.yaml  basic_recon_v3.yaml  basic_recon_v4_ufmg.yaml  general.config  map_builder_params.yaml  oakd_map_builder_params.yaml  oakd_optimized_params.yaml  rgbd_wireless.yaml  rtabmap_config.yaml
include/map_builder/: enhanced_visual_odometry.hpp  happly.h  hole_filling.hpp  map_builder.hpp  my_png.hpp  parser.hpp  point_cloud_processor.hpp  pset.hpp  rm_artifacts.hpp  surface_recon.hpp  surface_reconstructor.hpp  texture.hpp  visual_odometry.hpp
launch/: complete_system.launch.py  enhanced_map_builder.launch.py  laptop_side.launch.py  map_builder.launch.py  oakd_3d_mapping.launch.py  oakd_3d_mapping_depthai.launch.py  oakd_3d_mapping_original.launch.py  oakd_3d_mapping_publisher.launch.py  oakd_3d_mapping_simple.launch.py  oakd_enhanced_mapping.launch.py  oakd_map_builder.launch.py  oakd_no_rviz.launch.py  oakd_test.launch.py  p_normal_service.launch  p_normal_service_launch.py  recon_service.launch  recon_service_launch.py  robot_side.launch.py  rtabmap.launch.py  rtabmap_laptop.launch.py  rtabmap_wireless.launch.py  test_oakd_simple.launch.py  test_p_normal_service.launch  test_p_normal_service_launch.py  test_recon_service.launch  test_recon_service_launch.py  test_without_rviz.launch.py
map_builder/: map_builder_node.py
map_builder/nodes/: point_cloud_processor.py  surface_reconstructor.py
map_builder/scripts/: __init__.py  diagnostics.py  fix_rviz.py  system_monitor.py
rviz/: map_builder.rviz  map_builder_3d.rviz  map_builder_clean.rviz  map_builder_fixed.rviz  map_builder_minimal.rviz  oakd_test.rviz
script/: dyn_reconfigure_client_test.py  dyn_reconfigure_server.py  publish_mesh_marker.py  test_mesh_service.py  test_p_normal_service.py
src/: enhanced_visual_odometry.cpp  enhanced_visual_odometry_node.cpp  hole_filling.cpp  main.cpp  map_builder.cpp  map_builder_node.cpp  my_png.cpp  p_normal_service_from_pointcloud.cpp  point_cloud_processor.cpp  point_cloud_processor_node.cpp  pset.cpp  recon_service_from_pointcloud.cpp  rm_artifacts.cpp  surface_recon.cpp  surface_reconstructor.cpp  surface_reconstructor_node.cpp  texture.cpp  visual_odometry.cpp  visual_odometry_node.cpp
src/map_builder/: package.xml  setup.py
src/map_builder/launch/: map_builder.launch.py
src/map_builder/map_builder/: point_cloud_processor.py  surface_reconstructor.py
src/oakd_driver/: package.xml  setup.py
src/oakd_driver/oakd_driver/: oakd_node.py  oakd_publisher.py
test/: estimate_times_reconstruction_from_folder.py  test_map_builder.cpp
test/test_plot_riemannian_graph/: plot_riemannian.py
