<?xml version="1.0"?>
<package format="3">
  <name>map_builder</name>
  <version>0.0.0</version>
  <description>The map_builder package migrated to ROS2</description>

  <maintainer email="h3ct0r@todo.todo">h3ct0r</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <!-- Required when the package generates ROS interfaces (srv/msg) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
